src/objects/Apttus_Config2__ProductConstraintEntry__c.object
<CustomObject>
    <description>Represents a single entry in a product constraint</description>
    <fields>
        <fullName>Apttus_Config2__ExcludeProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group to exclude for selected products or options</description>
        <label>Exclude Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Constraint Entries (Exclude Product Group)</relationshipLabel>
        <relationshipName>ExcludeProductConstraintEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or option to exclude for selected products or options</description>
        <label>Exclude Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Entries (Exclude Product)</relationshipLabel>
        <relationshipName>ExcludeProductConstraintEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeDefaultQuantity__c</fullName>
        <description>The default quantity of the product to include</description>
        <label>Include Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMaxProducts__c</fullName>
        <description>The maximum number of products that may be included from the list of products. Setting the maximum products constrains the number of products the user can include from the list of products.</description>
        <label>Include Max Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMaxQuantity__c</fullName>
        <description>The maximum quantity of the product to include</description>
        <label>include Max Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMinProducts__c</fullName>
        <description>The minimum number of products that must be included from the list of products. Setting the minimum products to greater than 0 means the user is required to include a product from the list products. This creates an &quot;inclusion&quot; rule. Setting the minimum products to 0 means the user is not required to include a product from the list of products.</description>
        <label>Include Min Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMinQuantity__c</fullName>
        <description>The minimum quantity of the product to include</description>
        <label>Include Min Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group to include for selected products or options</description>
        <label>Include Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Constraint Entries (Include Product Group)</relationshipLabel>
        <relationshipName>IncludeProductConstraintEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or option to include for selected products or options</description>
        <label>Include Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Entries (Include Product)</relationshipLabel>
        <relationshipName>IncludeProductConstraintEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductConstraintId__c</fullName>
        <description>ID of the associated constraint</description>
        <label>Product Constraint</label>
        <referenceTo>Apttus_Config2__ProductConstraint__c</referenceTo>
        <relationshipLabel>Constraint Entries</relationshipLabel>
        <relationshipName>ConstraintEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related product</description>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Constraints</relationshipLabel>
        <relationshipName>RelatedConstraints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProduct1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or option</description>
        <label>Selected Product 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Entries (Selected Product 1)</relationshipLabel>
        <relationshipName>SelectedProductContraintEntries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or option</description>
        <label>Selected Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Entries (Selected Product 2)</relationshipLabel>
        <relationshipName>SelectedProductContraintEntries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProduct3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or option</description>
        <label>Selected Product 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Entries (Selected Product 3)</relationshipLabel>
        <relationshipName>SelectedProductContraintEntries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductCategory__c</fullName>
        <description>The selected product category</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product group</description>
        <label>Selected Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Constraint Entries (Selected Product Group)</relationshipLabel>
        <relationshipName>SelectedProductConstraintEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The constraint entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Constraint Entry</label>
    <nameField>
        <displayFormat>CE-{0000000000}</displayFormat>
        <label>Constraint Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Constraint Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>